[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATCGuardiansCarePlanReportMpc821"
version = "1.0"
description = "Guardians care plan report"
readme = "README.md"
authors = [
    { name = "JC, DL", email = "derek.loren@su.suffolk.edu" },
]
dependencies = [
    "docassemble.ALMassachusetts>=0.1.2",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.MassAccess @ git+https://github.com/SuffolkLITLab/docassemble-MassAccess.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
